--- a/template_language/homework/templates/layout.html
+++ b/template_language/homework/templates/layout.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/movies">Movies</a>
+                    <a class="nav-link" href="movies.html">Movies</a>
                 </li>
             </ul>
         </div>
@@ -34,7 +34,7 @@
 
 
 <div class="container h-100 d-flex flex-column">
-    {#  Insert any templates here  #}
+    {% block content %}{% endblock %}
 </div>
 
 
